# BaseProject

./: .clang-format  .gitmessage  CMakeLists.txt  CrossCompile.cmake  README.md  build.py  x86Compile.cmake
docs/: demo.md
include/: demo.h
src/: CMakeLists.txt
src/demo/: demo.c
test/: CMakeLists.txt
test/demo/: test_demo.c
tools/neovim/: Readme.md
tools/neovim/config/plugin/: packer_compiled.lua
unitest/: CMakeLists.txt  test_main.cpp
unitest/demo/: test_demo.cpp
unitest/googletest-1.14.0/: CMakeLists.txt
